--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.html
@@ -5,30 +5,48 @@
     <head>
         <body>
 
-    <div id="a">
-    <div id="b">
-        <div id="c"></div>
-    </div>
+<div id="altitude"></div>
+
+<div class="distances">
+    <div id="distance1">0</div>
+    <div id="distance2">20</div>
+    <div id="distance3">40</div>
+    <div id="distance4">60</div>
+    <div id="distance5">80</div>
+
 </div>
+
 
 <div class="waypoints">
 
-<div id="waypoint1">DOCKR</div> 
+<div id="waypoint1" class="waypoints">DOCKR</div> 
 
-<div id="waypoint2">EVOSE</div>
+<div id="waypoint2" class="waypoints">EVOSE</div>
 
-<div id="waypoint3">MKGEE</div>
+<div id="waypoint3" class="waypoints">MKGEE</div>
 
-<div id="waypoint4">DARRK</div>
+<div id="waypoint4" class="waypoints">DARRK</div>
 
-<div id="waypoint5">SUMMR</div>
+<div id="waypoint5" class="waypoints">SUMMR</div>
+
 </div>
 
-<div class="line1"></div>
-<div class="line2"></div>
-<div class="line3"></div>
-<div class="line4"></div>
-<div class="line5"></div>
+<div id="const1" class="constraints">3000</div> 
+
+<div id="const2" class="constraints">5000</div>
+
+<div id="const3" class="constraints">i</div>
+
+<div id="const4" class="constraints">12000</div>
+
+<div id="const5" class="constraints"></div>
+</div>
+
+<div class="line1">i</div> <!--Lines become misaligned with waypoints when adjusting window size, unlike altitudes-->
+<div class="line2">i</div>
+<div class="line3">i</div>
+<div class="line4">i</div>
+<div class="line5">i</div>
 <div class="planemarker"></div>
         </body>          
      </head>  
