alt and distance displays, shift to the right

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.html
@@ -5,7 +5,20 @@
     <head>
         <body>
 
-<div id="altitude"></div>
+<div class="altitudes">
+    <div id="altitude1">24000</div>
+    <div id="altitude2">12000</div>
+    <div id="altitude3">6000</div>
+    <div id="altitude4">2000</div>
+
+    <div class="altMarker">
+        <div id="altMrk1" class="altMarker"></div> 
+        <div id="altMrk2" class="altMarker"></div>
+        <div id="altMrk3" class="altMarker"></div>
+        <div id="altMrk4" class="altMarker"></div>
+        </div>
+
+</div>
 
 <div class="distances">
     <div id="distance1">0</div>
@@ -42,12 +55,14 @@
 <div id="const5" class="constraints"></div>
 </div>
 
-<div class="line1">i</div> <!--Lines become misaligned with waypoints when adjusting window size, unlike altitudes-->
-<div class="line2">i</div>
-<div class="line3">i</div>
-<div class="line4">i</div>
-<div class="line5">i</div>
-<div class="planemarker"></div>
+<div class="lines">
+<div id="line1" class="lines"></div> <!--Lines become misaligned with waypoints when adjusting window size, unlike altitudes-->
+<div id="line2" class="lines"></div>
+<div id="line3" class="lines"></div>
+<div id="line4" class="lines"></div>
+<div id="line5" class="lines"></div>
+</div>
+<div id="planemarker"></div>
         </body>          
      </head>  
 </html>
