--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.html
@@ -6,6 +6,7 @@
         <body>
 
 <div class="altitudes">
+    <div id="currentAlt">4000</div>
     <div id="altitude1">24000</div>
     <div id="altitude2">12000</div>
     <div id="altitude3">6000</div>
@@ -26,6 +27,14 @@
     <div id="distance3">40</div>
     <div id="distance4">60</div>
     <div id="distance5">80</div>
+
+<div class="distMarker">
+    <div id="distMrk1"></div>
+    <div id="distMrk2"></div>
+    <div id="distMrk3"></div>
+    <div id="distMrk4"></div>
+    <div id="distMrk5"></div>
+</div>
 
 </div>
 
@@ -61,6 +70,7 @@
 <div id="line3" class="lines"></div>
 <div id="line4" class="lines"></div>
 <div id="line5" class="lines"></div>
+<div id="aglLine" class="lines"></div>
 </div>
 <div id="planemarker"></div>
         </body>          
