added plane marker

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.html
@@ -72,7 +72,12 @@
 <div id="line5" class="lines"></div>
 <div id="aglLine" class="lines"></div>
 </div>
-<div id="planemarker"></div>
+
+<div id="planemarker1"></div>
+<div id="planemarker2"></div>
+
+<div id="planevd"></div>
+
         </body>          
      </head>  
 </html>
