--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.html
@@ -57,7 +57,7 @@
 
 <div id="const2" class="constraints">5000</div>
 
-<div id="const3" class="constraints">i</div>
+<div id="const3" class="constraints"></div>
 
 <div id="const4" class="constraints">12000</div>
 
@@ -73,10 +73,18 @@
 <div id="aglLine" class="lines"></div>
 </div>
 
+
 <div id="planemarker1"></div>
 <div id="planemarker2"></div>
 
 <div id="planevd"></div>
+
+<div class="vPath">
+
+    <div id="vPath1" class="vPath"></div>
+    <div id="vPath2" class="vPath"></div>
+    <div id="vPath3" class="vPath"></div>
+</div>
 
         </body>          
      </head>  
