changed focus of VSD for now on STAR instead of SID RJTT GODIN2K

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.html
@@ -41,15 +41,31 @@
 
 <div class="waypoints">
 
-<div id="waypoint1" class="waypoints">DOCKR</div> 
+<div id="waypoint1" class="waypoints">GODIN</div> 
 
-<div id="waypoint2" class="waypoints">EVOSE</div>
+<div id="waypoint2" class="waypoints">CHIPS</div>
 
-<div id="waypoint3" class="waypoints">MKGEE</div>
+<div id="waypoint3" class="waypoints">COLOR</div>
 
-<div id="waypoint4" class="waypoints">DARRK</div>
+<div id="waypoint4" class="waypoints">COPSE</div>
 
-<div id="waypoint5" class="waypoints">SUMMR</div>
+<div id="waypoint5" class="waypoints">COACH</div>
+
+<div id="waypoint6" class="waypoints">TT465</div>
+
+<div id="waypoint7" class="waypoints">TT466</div>
+
+<div id="waypoint8" class="waypoints">TT467</div>
+
+<div id="waypoint9" class="waypoints">EDDIE</div>
+
+<div id="waypoint10" class="waypoints">TT468</div>
+
+<div id="waypoint11" class="waypoints">TT469</div>
+
+<div id="waypoint12" class="waypoints">UMUKI</div>
+
+<div id="waypoint13" class="waypoints">KAIHO</div> <!--find a way to auto-gen div way-points-->
 
 </div>
 
@@ -62,6 +78,25 @@
 <div id="const4" class="constraints">12000</div>
 
 <div id="const5" class="constraints"></div>
+
+<div id="const6" class="constraints"></div>
+
+<div id="const5" class="constraints"></div>
+
+<div id="const7" class="constraints"></div>
+
+<div id="const8" class="constraints"></div>
+
+<div id="const9" class="constraints"></div>
+
+<div id="const10" class="constraints"></div>
+
+<div id="const11" class="constraints"></div>
+
+<div id="const12" class="constraints"></div>
+
+<div id="const13" class="constraints"></div>
+
 </div>
 
 <div class="lines">
