AGL line re-added, extra waypoints, constraints for GODIN2K

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.html
@@ -69,15 +69,15 @@
 
 </div>
 
-<div id="const1" class="constraints">3000</div> 
+<div id="const1" class="constraints"></div> 
 
-<div id="const2" class="constraints">5000</div>
+<div id="const2" class="constraints">13000</div>
 
-<div id="const3" class="constraints"></div>
+<div id="const3" class="constraints">11000</div>
 
-<div id="const4" class="constraints">12000</div>
+<div id="const4" class="constraints"></div>
 
-<div id="const5" class="constraints"></div>
+<div id="const5" class="constraints">8000</div>
 
 <div id="const6" class="constraints"></div>
 
@@ -87,24 +87,37 @@
 
 <div id="const8" class="constraints"></div>
 
-<div id="const9" class="constraints"></div>
+<div id="const9" class="constraints">8000</div>
 
 <div id="const10" class="constraints"></div>
 
 <div id="const11" class="constraints"></div>
 
-<div id="const12" class="constraints"></div>
+<div id="const12" class="constraints">6000</div>
 
 <div id="const13" class="constraints"></div>
 
 </div>
 
-<div class="lines">
+<div class="lines"> <!--find a better less generic term for this class lol-->
 <div id="line1" class="lines"></div> <!--Lines become misaligned with waypoints when adjusting window size, unlike altitudes-->
-<div id="line2" class="lines"></div>
+<div id="line2" class="lines"></div> <!-- Need to find a way to make line divs to scale-->
 <div id="line3" class="lines"></div>
 <div id="line4" class="lines"></div>
 <div id="line5" class="lines"></div>
+<div id="line6" class="lines"></div>
+<div id="line7" class="lines"></div>
+<div id="line8" class="lines"></div>
+<div id="line9" class="lines"></div>
+<div id="line10" class="lines"></div>
+<div id="line11" class="lines"></div>
+<div id="line12" class="lines"></div>
+<div id="line13" class="lines"></div>
+<div id="vConst1" class="lines"></div>
+<div id="vConst2" class="lines"></div>
+<div id="vConst3" class="lines"></div>
+<div id="vConst4" class="lines"></div>
+<div id="vConst5" class="lines"></div>
 <div id="aglLine" class="lines"></div>
 </div>
 
@@ -119,6 +132,12 @@
     <div id="vPath1" class="vPath"></div>
     <div id="vPath2" class="vPath"></div>
     <div id="vPath3" class="vPath"></div>
+    <div id="vPath4" class="vPath"></div>
+    <div id="vPath5" class="vPath"></div>
+    <div id="vPath6" class="vPath"></div>
+    <div id="vPath7" class="vPath"></div>
+    <div id="vPath8" class="vPath"></div>
+    <div id="vPath9" class="vPath"></div>
 </div>
 
         </body>          
