--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.html
@@ -17,6 +17,11 @@
         <div id="altMrk2" class="altMarker"></div>
         <div id="altMrk3" class="altMarker"></div>
         <div id="altMrk4" class="altMarker"></div>
+        <div id="altTick1" class="altMarker"></div>
+        <div id="altTick2" class="altMarker"></div>
+        <div id="altTick3" class="altMarker"></div>
+        <div id="altTick4" class="altMarker"></div>
+
         </div>
 
 </div>
@@ -34,6 +39,10 @@
     <div id="distMrk3"></div>
     <div id="distMrk4"></div>
     <div id="distMrk5"></div>
+    <div id="distTick1"></div>
+    <div id="distTick2"></div>
+    <div id="distTick3"></div>
+    <div id="distTick4"></div>
 </div>
 
 </div>
@@ -119,6 +128,7 @@
 <div id="vConst4" class="lines"></div>
 <div id="vConst5" class="lines"></div>
 <div id="aglLine" class="lines"></div>
+<div id="pageSep" class="lines"></div>
 </div>
 
 
@@ -138,6 +148,17 @@
     <div id="vPath7" class="vPath"></div>
     <div id="vPath8" class="vPath"></div>
     <div id="vPath9" class="vPath"></div>
+</div>
+
+<div class = "markers">
+    <div id="constraintmark1" class="markers"></div>
+    <div id="constraintmark2" class="markers"></div>
+    <div id="speedmark" class="markers"></div>
+    <div id="tdMarker" class="markers">T/D</div>
+    <div id="tdIndicator" class="markers">T/D</div>
+    <div id="aglMarker" class="markers"></div>
+    <div id="aglMarker2" class="markers"></div>
+    
 </div>
 
         </body>          
