Fixed window scaling issue, set waypoint distances to scale, code cleanup

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.html
@@ -1,7 +1,9 @@
 <link rel="stylesheet" type="text/css" href="B787_10_VSD.css"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<
 <html>
+    <div id="wrapper">
     <head>
         <body>
 
@@ -50,85 +52,85 @@
 
 <div class="waypoints">
 
-<div id="waypoint1" class="waypoints">GODIN</div> 
+    <div id="waypoint1" class="waypoints">GODIN</div> 
 
-<div id="waypoint2" class="waypoints">CHIPS</div>
+    <div id="waypoint2" class="waypoints">CHIPS</div>
 
-<div id="waypoint3" class="waypoints">COLOR</div>
+    <div id="waypoint3" class="waypoints">COLOR</div>
 
-<div id="waypoint4" class="waypoints">COPSE</div>
+    <div id="waypoint4" class="waypoints">COPSE</div>
 
-<div id="waypoint5" class="waypoints">COACH</div>
+    <div id="waypoint5" class="waypoints">COACH</div>
 
-<div id="waypoint6" class="waypoints">TT465</div>
+    <div id="waypoint6" class="waypoints">TT465</div>
 
-<div id="waypoint7" class="waypoints">TT466</div>
+    <div id="waypoint7" class="waypoints">TT466</div>
 
-<div id="waypoint8" class="waypoints">TT467</div>
+    <div id="waypoint8" class="waypoints">TT467</div>
 
-<div id="waypoint9" class="waypoints">EDDIE</div>
+    <div id="waypoint9" class="waypoints">EDDIE</div>
 
-<div id="waypoint10" class="waypoints">TT468</div>
+    <div id="waypoint10" class="waypoints">TT468</div>
 
-<div id="waypoint11" class="waypoints">TT469</div>
+    <div id="waypoint11" class="waypoints">TT469</div>
 
-<div id="waypoint12" class="waypoints">UMUKI</div>
+    <div id="waypoint12" class="waypoints">UMUKI</div>
 
-<div id="waypoint13" class="waypoints">KAIHO</div> <!--find a way to auto-gen div way-points-->
+    <div id="waypoint13" class="waypoints">KAIHO</div> <!--find a way to auto-gen div way-points-->
 
 </div>
 
-<div id="const1" class="constraints"></div> 
+<div id="const1" class="constraints">
 
-<div id="const2" class="constraints">13000</div>
+    <div id="const2" class="constraints">13000</div>
 
-<div id="const3" class="constraints">11000</div>
+    <div id="const3" class="constraints">11000</div>
 
-<div id="const4" class="constraints"></div>
+    <div id="const4" class="constraints"></div>
 
-<div id="const5" class="constraints">8000</div>
+    <div id="const5" class="constraints">8000</div>
 
-<div id="const6" class="constraints"></div>
+    <div id="const6" class="constraints"></div>
 
-<div id="const5" class="constraints"></div>
+    <div id="const5" class="constraints"></div>
 
-<div id="const7" class="constraints"></div>
+    <div id="const7" class="constraints"></div>
 
-<div id="const8" class="constraints"></div>
+    <div id="const8" class="constraints"></div>
 
-<div id="const9" class="constraints">8000</div>
+    <div id="const9" class="constraints">8000</div>
 
-<div id="const10" class="constraints"></div>
+    <div id="const10" class="constraints"></div>
 
-<div id="const11" class="constraints"></div>
+    <div id="const11" class="constraints"></div>
 
-<div id="const12" class="constraints">6000</div>
+    <div id="const12" class="constraints">6000</div>
 
-<div id="const13" class="constraints"></div>
+    <div id="const13" class="constraints"></div>
 
 </div>
 
 <div class="lines"> <!--find a better less generic term for this class lol-->
-<div id="line1" class="lines"></div> <!--Lines become misaligned with waypoints when adjusting window size, unlike altitudes-->
-<div id="line2" class="lines"></div> <!-- Need to find a way to make line divs to scale-->
-<div id="line3" class="lines"></div>
-<div id="line4" class="lines"></div>
-<div id="line5" class="lines"></div>
-<div id="line6" class="lines"></div>
-<div id="line7" class="lines"></div>
-<div id="line8" class="lines"></div>
-<div id="line9" class="lines"></div>
-<div id="line10" class="lines"></div>
-<div id="line11" class="lines"></div>
-<div id="line12" class="lines"></div>
-<div id="line13" class="lines"></div>
-<div id="vConst1" class="lines"></div>
-<div id="vConst2" class="lines"></div>
-<div id="vConst3" class="lines"></div>
-<div id="vConst4" class="lines"></div>
-<div id="vConst5" class="lines"></div>
-<div id="aglLine" class="lines"></div>
-<div id="pageSep" class="lines"></div>
+    <div id="line1" class="lines"></div> <!--Lines become misaligned with waypoints when adjusting window size, unlike altitudes-->
+    <div id="line2" class="lines"></div> <!-- Need to find a way to make line divs to scale-->
+    <div id="line3" class="lines"></div>
+    <div id="line4" class="lines"></div>
+    <div id="line5" class="lines"></div>
+    <div id="line6" class="lines"></div>
+    <div id="line7" class="lines"></div>
+    <div id="line8" class="lines"></div>
+    <div id="line9" class="lines"></div>
+    <div id="line10" class="lines"></div>
+    <div id="line11" class="lines"></div>
+    <div id="line12" class="lines"></div>
+    <div id="line13" class="lines"></div>
+    <div id="vConst1" class="lines"></div>
+    <div id="vConst2" class="lines"></div>
+    <div id="vConst3" class="lines"></div>
+    <div id="vConst4" class="lines"></div>
+    <div id="vConst5" class="lines"></div>
+    <div id="aglLine" class="lines"></div>
+    <div id="pageSep" class="lines"></div>
 </div>
 
 
@@ -163,4 +165,5 @@
 
         </body>          
      </head>  
+    </div>
 </html>
