PFD shows selected vREF now

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.html
@@ -80,11 +80,12 @@
                     <div id="HorizonContainer">
 
                         <div id="FakeBlackMask" irs-state="aligned">
-                            <svg id="FakeMaskSvg" version="1.1" viewBox="0 0 600 600 " xmlns="http://www.w3.org/2000/svg">
-                                <rect id="AttBox" x="182" y="204" width="54" height="27" irs-state="aligned" />
+                            <svg id="FakeMaskSvg" version="1.1" viewBox="0 0 600 600 "
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <rect id="AttBox" x="182" y="204" width="54" height="27" irs-state="aligned"/>
                                 <text id="AttText" x="209" y="217.5" irs-state="aligned">ATT</text>
 
-                                <rect id="VertBox" x="485" y="205" width="26" height="85" irs-state="aligned" />
+                                <rect id="VertBox" x="485" y="205" width="26" height="85" irs-state="aligned"/>
 
                                 <text id="VertText" transform="rotate(90)" x="226" y="-492" irs-state="aligned">
                                     <tspan id="VertTextSpan" rotate="270 270 270 270 0">VERT</tspan>
@@ -106,7 +107,8 @@
                     </div>
                 </div>
                 <div class="bottom">
-                    <svg id="FakeHdgSvg" version="1.1" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg" irs-state="aligned">
+                    <svg id="FakeHdgSvg" version="1.1" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg"
+                         irs-state="aligned">
                         <rect id="FakeHdgBox" x="280" y="1" width="40" height="20"/>
                         <text id="FakeHdgText" x="300" y="10">HDG</text>
                     </svg>
@@ -167,4 +169,5 @@
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/Shared/PFD/NDCompass.js"></script>
 
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.js"></script>
