!!! THIS COMMIT IS PART OF EXPERIMENTAL VERSION !!!
Experimental PFD implementation

The experimental version is not intended for normal users. This version does not have any support.

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.html
@@ -1,173 +1,1 @@
-﻿<link rel="stylesheet" href="B787_10_PFD.css"/>
-
-<script type="text/html" id="B787_10_PFD">
-    <glasscockpit-highlight id="highlight"></glasscockpit-highlight>
-    <div id="MainFrame">
-        <div id="Electricity" state="off">
-            <div id="LeftDisplay">
-                <div class="content">
-                    <div id="PlaneInfo" class="element">
-                        <div id="PlaneInfo_Fields">
-                            <div>FLT</div>
-                            <div>MIC</div>
-                            <div>XPDR</div>
-                            <div>SELCAL</div>
-                            <div>TAIL</div>
-                        </div>
-                        <div id="PlaneInfo_Values">
-                            <div id="Value_Flight"></div>
-                            <div id="Value_Frequency"></div>
-                            <div id="Value_XPDR"></div>
-                            <div id="Value_SELCAL"></div>
-                            <div id="Value_Tail"></div>
-                        </div>
-                        <div id="Watch">
-                            <svg id="Analog" viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="250" cy="250" r="240" fill=#1E1B1C stroke="white" stroke-width="9"/>
-
-                                <rect id="Analog_Hour" x="242.5" y="152" width="15" height="101.35" rx="3.5" ry="3.5"
-                                      fill="white"/>
-                                <rect id="Analog_Minutes" x="242.5" y="50.6" width="15" height="202.71" rx="3.5"
-                                      ry="3.5" fill="white"/>
-                                <rect id="Analog_Seconds" x="248" y="50.6" width="4" height="202.71" rx="1.2" ry="1.2"
-                                      fill="red"/>
-
-                                <circle cx="250" cy="250" r="16" fill="white"/>
-
-                                <rect x="245" y="10" width="10" height="45" fill="white"/>
-                                <rect x="245" y="10" width="10" height="45" fill="white"
-                                      transform="rotate(30, 250, 250)"/>
-                                <rect x="245" y="10" width="10" height="45" fill="white"
-                                      transform="rotate(60, 250, 250)"/>
-                                <rect x="245" y="10" width="10" height="45" fill="white"
-                                      transform="rotate(90, 250, 250)"/>
-                                <rect x="245" y="10" width="10" height="45" fill="white"
-                                      transform="rotate(120, 250, 250)"/>
-                                <rect x="245" y="10" width="10" height="45" fill="white"
-                                      transform="rotate(150, 250, 250)"/>
-                                <rect x="245" y="10" width="10" height="45" fill="white"
-                                      transform="rotate(180, 250, 250)"/>
-                                <rect x="245" y="10" width="10" height="45" fill="white"
-                                      transform="rotate(-150, 250, 250)"/>
-                                <rect x="245" y="10" width="10" height="45" fill="white"
-                                      transform="rotate(-120, 250, 250)"/>
-                                <rect x="245" y="10" width="10" height="45" fill="white"
-                                      transform="rotate(-90, 250, 250)"/>
-                                <rect x="245" y="10" width="10" height="45" fill="white"
-                                      transform="rotate(-60, 250, 250)"/>
-                                <rect x="245" y="10" width="10" height="45" fill="white"
-                                      transform="rotate(-30, 250, 250)"/>
-                            </svg>
-                            <div id="Digital"></div>
-                        </div>
-                    </div>
-                    <div id="DayInfo" class="element">
-                        <div id="DayInfo_Fields">
-                            <div>UTC TIME</div>
-                            <div>DATE</div>
-                            <div>ELAPSED TIME</div>
-                        </div>
-                        <div id="DayInfo_Values">
-                            <div id="Value_UTC"></div>
-                            <div id="Value_Date"></div>
-                            <div id="Value_Elapsed"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="RightDisplay">
-                <div class="top">
-                    <div id="HorizonContainer">
-
-                        <div id="FakeBlackMask" irs-state="aligned">
-                            <svg id="FakeMaskSvg" version="1.1" viewBox="0 0 600 600 "
-                                 xmlns="http://www.w3.org/2000/svg">
-                                <rect id="AttBox" x="182" y="204" width="54" height="27" irs-state="aligned"/>
-                                <text id="AttText" x="209" y="217.5" irs-state="aligned">ATT</text>
-
-                                <rect id="VertBox" x="485" y="205" width="26" height="85" irs-state="aligned"/>
-
-                                <text id="VertText" transform="rotate(90)" x="226" y="-492" irs-state="aligned">
-                                    <tspan id="VertTextSpan" rotate="270 270 270 270 0">VERT</tspan>
-                                </text>
-
-                            </svg>
-                        </div>
-
-                        <jet-pfd-attitude-indicator id="Horizon" background="true"></jet-pfd-attitude-indicator>
-                    </div>
-                    <div id="InstrumentsContainer">
-                        <jet-pfd-altimeter-indicator id="Altimeter"></jet-pfd-altimeter-indicator>
-                        <jet-pfd-vspeed-indicator id="VSpeed" irs-state="aligned"></jet-pfd-vspeed-indicator>
-                        <jet-pfd-airspeed-indicator id="Airspeed"></jet-pfd-airspeed-indicator>
-                        <jet-pfd-ils-indicator id="ILS"></jet-pfd-ils-indicator>
-                    </div>
-                    <div id="FMAContainer">
-                        <boeing-fma id="FMA" class="AS01B_PFD"></boeing-fma>
-                    </div>
-                </div>
-                <div class="bottom">
-                    <svg id="FakeHdgSvg" version="1.1" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg"
-                         irs-state="aligned">
-                        <rect id="FakeHdgBox" x="280" y="1" width="40" height="20"/>
-                        <text id="FakeHdgText" x="300" y="10">HDG</text>
-                    </svg>
-                    <div id="Map">
-                        <map-instrument id="MapInstrument" bing-id="PFD" show-overlay="false" show-roads="false"
-                                        show-bing-map="false"
-                                        config-path="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/"></map-instrument>
-                    </div>
-                    <jet-pfd-nd-compass id="Compass" display-mode="arc" irs-state="aligned"></jet-pfd-nd-compass>
-                    <b787-10-pfd-compass-infos id="CompassInfos" irs-state="aligned"></b787-10-pfd-compass-infos>
-                </div>
-            </div>
-        </div>
-    </div>
-</script>
-
-<script type="text/html" import-script="/JS/SimPlane.js"></script>
-
-<!-- WT files -->
-<script type="text/html" import-script="/WTPages/WTLibs/WT_SimPlaneMod.js"></script>
-<script type="text/html" import-script="/WTPages/WTLibs/DataStore.js"></script>
-<script type="text/html" import-script="/WTPages/WTLibs/WT_GCMath.js"></script>
-<script type="text/html" import-script="/WTPages/WTLibs/LzUtf8.js"></script>
-<script type="text/html" import-script="/WTPages/WTLibs/wtsdk.js"></script>
-
-<script type="text/html" import-script="/WTPages/Autopilot/AutopilotMath.js"></script>
-<script type="text/html" import-script="/WTPages/Autopilot/HoldsDirector.js"></script>
-
-<!-- WT files END -->
-
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/Utils/RadioNav.js"></script>
-
-<script type="text/html"
-        import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/Templates/Highlight/Highlight.js"></script>
-
-<script type="text/html"
-        import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/LogicElements/SelectableElement.js"></script>
-<script type="text/html"
-        import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/LogicElements/SearchField.js"></script>
-
-<script type="text/html" import-template="/HPages/VCockpit/Instruments/Shared/Map/MapInstrument.html"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/NavSystem.js"></script>
-
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/Shared/PFD/AirspeedIndicator.js"></script>
-<script type="text/html"
-        import-script="/Pages/VCockpit/Instruments/Airliners/Shared/PFD/AltimeterIndicator.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/Shared/PFD/HSIndicator.js"></script>
-<script type="text/html"
-        import-script="/HPages/VCockpit/Instruments/Airliners/Shared/PFD/AttitudeIndicator.js"></script>
-<script type="text/html"
-        import-script="/Pages/VCockpit/Instruments/Airliners/Shared/PFD/VerticalSpeedIndicator.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/Shared/PFD/ILSIndicator.js"></script>
-
-<script type="text/html" import-template="/Pages/VCockpit/Instruments/Airliners/Shared/Boeing/Boeing_FMA.html"></script>
-
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/Shared/BaseAirliners.js"></script>
-<script type="text/html" import-script="/HPages/VCockpit/Instruments/Airliners/Shared/BaseNDCompass.js"></script>
-
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/Shared/PFD/NDCompass.js"></script>
-
-<script type="text/html"
-        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.js"></script>
+../../../../../../../../B787_10_PFD_Instrument/build/B787_10_PFD.html
